css/style.css
/* ... */
.search__input::placeholder {
  color: #ffffff;
}

/* clears the 'X' from Chrome */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.page-header__bookmarks {
  margin: 0;
  margin-left: auto;
}

.page-header__bookmarks:hover {
  background-color: #212a3a;
}

.page-header__bookmarks:active {
  background-color: #161d29;
}

.bookmarks__link {
  padding: 12px 20px;
}

.page-header__cart {
  margin: 0;
}

.page-header__cart:hover {
  background-color: #212a3a;
}

.page-header__cart:active {
  background-color: #161d29;
}

.cart__link {
  padding: 12px 20px;
}

.cart__link--has-items {
  background-color: #ee3643;
}

.page-header__order {
  margin: 0;
}

.page-header__order:hover {
  background-color: #212a3a;
}

.order__link {
  padding: 12px 20px;
  background-color: #63a63e;
}

.order__link:hover {
  background-color: #5fbb2d;
}

.order__link:active {
  opacity: 0.5;
  background-color: #518534;
}

.page-header__info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  width: 940px;
  min-height: 160px;
}

.page-header__description {
  margin: 0;
  margin-left: 53px;
  width: 196px;

  font-size: 16px;
  font-style: italic;
  line-height: 23px;
  color: #ee3643;
}

.page-header__company-info {
  width: 270px;
}

.page-header__company-info .company-info__phone {
  margin: 0;

  font-size: 21px;
  line-height: 21px;
  color: #ee3643;

  border: 3px solid #ffffff;
}

.page-header__company-info .company-info__address {
  color: #32425c;
  font-size: 14px;
  line-height: 24px;
  font-style: normal;
}

.page-header__user {
  width: 281px;

  font-size: 21px;
  line-height: 21px;
}

.page-header__user-wrapper {
  display: flex;
}

.page-header__user-wrapper--logged {
  background-color: #ffffff;
}

.page-header__user a:active {
  color: #000000;
  opacity: 0.3;
}

.user__login {
  padding: 10px;
  margin: 0;
}

.login__link {
  color: #000000;
  background-color: #ffffff;
}

.login__link:hover {
  color: #ee3643;
}

.user__signup {
  padding: 10px;
  margin: 0;
  margin-left: auto;
}

.signup__link {
  color: #000000;
  background-color: #ffffff;
}

.signup__link:hover {
  color: #ee3643;
}

.user__username {
  padding: 10px;
  margin: 0;
}

.username__link {
  color: #000000;
  background-color: #ffffff;
}

.user__logout {
  padding: 10px;
  margin: 0;
}

.logout__link {
  color: #000000;
  background-color: #ffffff;
}

.user__user-orders {
  padding: 10px;
  margin: 0;
}

.user-orders__link {
  color: #32425c;
  font-size: 16px;
  line-height: 18px;
  text-decoration: underline;
}

.user-orders__link:hover {
  color: #ee3643;
}

.user__user-account {
  padding: 10px;
  margin: 0;
}

.user-account__link {
  color: #32425c;
  font-size: 16px;
  line-height: 18px;
  text-decoration: underline;
}

.user-account__link:hover {
  color: #ee3643;
}

.page-header__header-navbar {
  margin: 0 auto;
  width: 940px;

  color: #ffffff;
  font-size: 17px;
  line-height: 17px;

  background-color: #32425c;
  box-shadow: inset 0 -5px 0 #293449;
}

.page-header__header-navbar a {
  color: #ffffff;
}

.header-navbar__list {
  display: flex;
  justify-content: space-between;
  margin: 0;
  padding: 0;

  list-style: none;
}

.header-navbar__item {
  flex-grow: 1;
  padding: 21px 0 22px;

  text-align: center;
}

.header-navbar__item:hover {
  background-color: #293449;
}

.header-navbar__link:active {
  opacity: 0.5;
  background-color: #1d2739;
}

/* Main */

.page-content__header {
  margin: 0;
  margin-bottom: 38px;
  padding: 25px 30px 34px 24px;

  color: #32425c;
  font-size: 30px;
  font-weight: 400;
  line-height: 30px;
  text-transform: uppercase;

  background-color: #f2f6f8;
}

.page-content__wrapper {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  width: 940px;
}

.page-content__popular-sections {
  display: flex;
  justify-content: space-between;
  margin-top: 59px;
  margin-bottom: 33px;
}

.popular-sections__column div {
  margin-bottom: 20px;
}

.popular-sections__column:nth-of-type(1) {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 620px;
}

.popular-sections__column:nth-of-type(2) {
  display: flex;
  flex-direction: column;
  width: 300px;
}

.popular-sections__tools-slider {
  position: relative;
  order: 1;
  width: 620px;
  height: 266px;
}

.tools-slide--2 {
  display: none;
}

.tools-slide__title {
  position: absolute;
  z-index: 1;
  top: 27px;
  left: 24px;
  margin: 0;

  color: #ffffff;
  font-size: 36px;
  font-weight: 700;
  line-height: 36px;
  text-transform: uppercase;
}

.tools-slide__description {
  position: absolute;
  z-index: 1;
  top: 47px;
  left: 24px;

  color: #ffffff;
  font-size: 18px;
  line-height: 24px;
}

.tools-slider__bullets {
  position: absolute;
  bottom: 15px;
  left: 290px;
  z-index: 1;
}

.tools-slider__button-next {
  position: absolute;
  top: 50%;
  right: 25px;
  z-index: 1;
}

.tools-slider__button-previous {
  position: absolute;
  top: 50%;
  left: 25px;
  z-index: 1;
}

.tools-slider__link {
  position: absolute;
  bottom: 22px;
  left: 25px;
  z-index: 1;
}

.popular-sections__materials-section {
  padding: 20px;
  width: 300px;
  min-height: 123px;

  background-color: #ffbf47;
}

.popular-sections__tools-section {
  padding: 20px;
  width: 300px;
  min-height: 123px;

  background-color: #3bbce3;
}

.popular-sections__equipment-section {
  padding: 20px;
  width: 300px;
  min-height: 123px;

  background-color: #dc91d8;
}

.popular-sections__discounts-section {
  padding: 20px;
  width: 300px;
  min-height: 123px;

  background-color: #8ed78f;
}

.popular-sections__shipment-section {
  padding: 20px;
  width: 300px;
  min-height: 123px;

  background-color: #ffc047;
}
/* ... */

